--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
                 <a href="products.html" class="nav-link">PRODUCTS</a>
-                <a href="#Partners" class="nav-link">PARTNERS</a>
+                <a href="partners.html" class="nav-link">PARTNERS</a>
                 <a href="#" class="nav-link">COMPANY</a>
             </nav>
         </div>
