--- a/products.html
+++ b/products.html
@@ -50,19 +50,19 @@
                             <h3>Demo</h3>
                             <h4 class="price">€0/month</h4>
                             <p>Try out how things workfor free! No automatic renewal.</p>
-                            <button class="btn">Try now</button>
+                            <button class="blue-btn">Try now</button>
                         </div>
                         <div class="pricing-option">
                             <h3>Yearly</h3>
                             <h4 class="price">€36/year</h4>
                             <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                            <button class="btn">Get Started</button>
+                            <button class="blue-btn">Get Started</button>
                         </div>
                         <div class="pricing-option">
                             <h3>Monthly</h3>
                             <h4 class="price">€4/month</h4>
                             <p>Cancel anytime. No hidden charges. No conpromises.</p>
-                            <button class="btn">Get Started</button>
+                            <button class="blue-btn">Get Started</button>
                         </div>
                     </div>
                     <p class="disclaimer">All prices are tax-inclusive and apply to a single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
@@ -91,19 +91,19 @@
                         <h3>Demo</h3>
                         <h4 class="price">€0/month</h4>
                         <p>Try out how things work for free! No automatic renewal. </p>
-                        <button class="btn">Try now</button>
+                        <button class="blue-btn">Try now</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Yearly</h3>
                         <h4 class="price">€54/year</h4>
                         <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                        <button class="btn">Get Started</button>
+                        <button class="blue-btn">Get Started</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Monthly</h3>
                         <h4 class="price">€6/month</h4>
                         <p>Cancel anytime. No hidden charges. No compromises </p>
-                        <button class="btn">Get Started</button>
+                        <button class="blue-btn">Get Started</button>
                     </div>
                 </div>
                 <p class="disclaimer">All prices are tax-inclusive and apply to a single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
@@ -133,19 +133,19 @@
                         <h3>Demo</h3>
                         <h4 class="price">€0/month</h4>
                         <p>Try out how things workfor free! No automatic renewal. </p>
-                        <button class="btn">Try now</button>
+                        <button class="blue-btn">Try now</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Yearly</h3>
                         <h4 class="price">€72/year</h4>
                         <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                        <button class="btn">Get Started</button>
+                        <button class="blue-btn">Get Started</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Monthly</h3>
                         <h4 class="price">€8/month</h4>
                         <p>Cancel anytime. no hidden charges. No compromises </p>
-                        <button class="btn">Get Started</button>
+                        <button class="blue-btn">Get Started</button>
                     </div>
                 </div>
                 <p class="disclaimer">All prices are tax-inclusive and apply to one single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
@@ -174,19 +174,19 @@
                         <h3>Demo</h3>
                         <h4 class="price">€0/month</h4>
                         <p>Try out how things work for free! No automatic renewal.</p>
-                        <button class="btn">Try now</button>
+                        <button class="blue-btn">Try now</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Yearly</h3>
                         <h4 class="price">€108/year</h4>
                         <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                        <button class="btn">Get Started</button>
+                        <button class="blue-btn">Get Started</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Monthly</h3>
                         <h4 class="price">€12/month</h4>
                         <p>Cancel anytime. no hidden charges. No compromises. </p>
-                        <button class="btn">Get Started</button>
+                        <button class="blue-btn">Get Started</button>
                     </div>
                 </div>
                 <p class="disclaimer">All prices are tax-inclusive and apply to a single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
