--- a/index.html
+++ b/index.html
@@ -6,32 +6,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header id="initial-header" class="initial-header">
-        <div class="container">
-            <a href="#" class="logo">GRIDRUNNER</a>
-            <nav>
-                <a href="platform.html" class="nav-link">PLATFORM</a>
-                <a href="products.html" class="nav-link">PRODUCTS</a>
-                <a href="partners.html" class="nav-link">PARTNERS</a>
-                <a href="#" class="nav-link">COMPANY</a>
-            </nav>
-        </div>
-    </header>
-
-    <header id="main-header" class="main-header">
-        <div class="container">
-            <a href="#" class="logo">GRIDRUNNER</a>
-            <nav>
-                <a href="#why" class="nav-link">Why Gridrunner?</a>
-                <a href="#platform" class="nav-link">Platform</a>
-                <a href="#stories" class="nav-link">Customer Stories</a>
-                <a href="#engage" class="nav-link">Engage with Us</a>
-            </nav>
-            <div class="dynamic-header-title"></div>
-        </div>
-    </header>
-
     <main role="main">
+        <header class="main-header">
+        <nav>
+            <a href="index.html" class="logo"><b> GRIDRUNNER</b></a>
+            <a href="platform.html" class="nav-link">Platform</a>
+            <a href="products.html" class="nav-link">Products</a>
+            <a href="partners.html" class="nav-link">Partners</a>
+            <a href="company.html" class="nav-link">Company</a>
+        </nav>
+</header>
         <section id="hero" class="section hero section">
             <div class="container">
                 <div class="hero-content">
