--- a/platform.html
+++ b/platform.html
@@ -8,18 +8,16 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
-    <header id="initial-header" class="initial-header">
-        <div class="container">
-            <a href="#" class="logo">GRIDRUNNER</a>
-            <nav>
-                <a href="#platform-hero">PLATFORM</a>
-                <a href="#platform-features">FEATURES</a>
-                <a href="#integrations">INTEGRATIONS</a>
-                <a href="#testimonials">TESTIMONIALS</a>
-            </nav>
+    <header class="main-header">
+        <nav>
+            <a href="index.html" class="logo"><b> GRIDRUNNER</b></a>
+            <a href="platform.html" class="nav-link">Platform</a>
+            <a href="products.html" class="nav-link">Products</a>
+            <a href="partners.html" class="nav-link">Partners</a>
+            <a href="company.html" class="nav-link">Company</a>
             <button class="btn btn-secondary">GET DEMO</button>
-        </div>
-    </header>
+        </nav>
+</header>
 
     <header id="main-header" class="main-header hidden">
         <div class="container">
