--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="products.html" class="nav-link">Products</a>
             <a href="partners.html" class="nav-link">Partners</a>
             <a href="company.html" class="nav-link">Company</a>
+            <button class="btn btn-secondary">GET DEMO</button>
         </nav>
 </header>
         <section id="hero" class="section hero section">
