--- a/index.html
+++ b/index.html
@@ -221,22 +221,21 @@
     </main>
 
     <footer>
-        <div class="container">
-            <div class="footer-links">
-                <a href="#">Privacy</a>
-                <a href="#">Cookies</a>
-                <a href="#">Contact us</a>
-            </div>
-            <div class="social-icons">
-                <a href="#"><i data-lucide="instagram"></i></a>
-                <a href="#"><i data-lucide="twitter"></i></a>
-                <a href="#"><i data-lucide="linkedin"></i></a>
-            </div>
-        </div>
-        <div class="copyright">
-            Copyright © 2024 Gridrunner. All Rights Reserved
-        </div>
-    </footer>
+            <div class="footerContainer">
+                <div class="footerItem">
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="contact.html">Contact us</a>
+                </div>
+                <div class="footerItem">
+                    <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
+                    <a href="#">Discord <img src="images/discord.svg" width="10px"/></a>
+                    <a href="#">YouTube <img src="images/youtube.svg" width="10px"/></a>
+            </div></div>
+            <div class="copyright">
+                Copyright © 2024 Gridrunner. All Rights Reserved
+            </div> 
+        </footer>
     <script src="script.ts"></script>
 </body>
 </html>
