--- a/platform.html
+++ b/platform.html
@@ -229,52 +229,22 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-column">
-                    <h3>Platform</h3>
-                    <ul>
-                        <li><a href="#">Network Security</a></li>
-                        <li><a href="#">Cloud Security</a></li>
-                        <li><a href="#">AI-Driven Operations</a></li>
-                    </ul>
+   <footer>
+            <div class="footerContainer">
+                <div class="footerItem">
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="contact.html">Contact us</a>
                 </div>
-                <div class="footer-column">
-                    <h3>Company</h3>
-                    <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Resources</h3>
-                    <ul>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Whitepapers</a></li>
-                        <li><a href="#">Case Studies</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Legal</h3>
-                    <ul>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Gridrunner. All rights reserved.</p>
-                <div class="social-icons">
-                    <a href="#"><i data-lucide="facebook" class="icon-small"></i></a>
-                    <a href="#"><i data-lucide="twitter" class="icon-small"></i></a>
-                    <a href="#"><i data-lucide="linkedin" class="icon-small"></i></a>
-                </div>
-            </div>
-        </div>
-    </footer>
+                <div class="footerItem">
+                    <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
+                    <a href="#">Discord <img src="images/discord.svg" width="10px"/></a>
+                    <a href="#">YouTube <img src="images/youtube.svg" width="10px"/></a>
+            </div></div>
+            <div class="copyright">
+                Copyright © 2024 Gridrunner. All Rights Reserved
+            </div> 
+        </footer>
 
     <script src="script.js"></script>
 </body>
