--- a/partners.html
+++ b/partners.html
@@ -127,6 +127,22 @@
         <p>Join a Network of Professionals willing to advance the cause of cybersecurity worldwide. Chat with industry experts and gain new insights with our advanced tools. Completely free of charge. </p>
         <button class="apply-button">Apply now</button>
     </section>
+    <footer>
+            <div class="footerContainer">
+                <div class="footerItem">
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="contact.html">Contact us</a>
+                </div>
+                <div class="footerItem">
+                    <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
+                    <a href="#">Discord <img src="images/discord.svg" width="10px"/></a>
+                    <a href="#">YouTube <img src="images/youtube.svg" width="10px"/></a>
+            </div></div>
+            <div class="copyright">
+                Copyright © 2024 Gridrunner. All Rights Reserved
+            </div> 
+        </footer>
 </div>
 <script src="script.js"></script>
     </section>
