--- a/products.html
+++ b/products.html
@@ -15,6 +15,7 @@
                 <a href="products.html" class="nav-link">Products</a>
                 <a href="partners.html" class="nav-link">Partners</a>
                 <a href="company.html" class="nav-link">Company</a>
+                <button class="btn btn-secondary">GET DEMO</button>
             </nav>
     </header>
     <div class="container">
