--- a/platform.html
+++ b/platform.html
@@ -157,65 +157,119 @@
         <section id="comparison" class="comparison section">
             <div class="container">
                 <h2>Compare Plans</h2>
-                <table class="comparison-table">
-                    <thead>
-                        <tr>
-                            <th>Feature</th>
-                            <th>Basic</th>
-                            <th>Pro</th>
-                            <th>Enterprise</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Network Security</td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                        </tr>
-                        <tr>
-                            <td>Cloud Security</td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                        </tr>
-                        <tr>
-                            <td>AI-Driven Operations</td>
-                            <td><i data-lucide="x" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                        </tr>
-                        <tr>
-                            <td>24/7 Support</td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                        </tr>
-                        <tr>
-                            <td>Custom Integrations</td>
-                            <td><i data-lucide="x" class="icon-small"></i></td>
-                            <td><i data-lucide="x" class="icon-small"></i></td>
-                            <td><i data-lucide="check" class="icon-small"></i></td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td></td>
-                            <td>
-                                <p class="price">$999</p>
-                                <button class="btn btn-primary">Choose Plan</button>
-                            </td>
-                            <td>
-                                <p class="price">$1,999</p>
-                                <button class="btn btn-primary">Choose Plan</button>
-                            </td>
-                            <td>
-                                <p class="price">Custom</p>
-                                <button class="btn btn-primary">Contact Sales</button>
-                            </td>
-                        </tr>
-                    </tfoot>
-                </table>
+<table>
+        <thead>
+            <tr>
+                <th>Feature</th>
+                <th>Core</th>
+                <th>Scale</th>
+                <th>Distributed</th>
+                <th>Ultimate</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Access to centralised spam & junk mail system</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Integrated real-time heuristic phishing detector</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Daily Cloud Backups and one-click recovery</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Weekly patches and security updates in our platform</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>24/7 Availability of our social engineering experts</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Access to centralised compromised and malicious website database</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Access to our distributed Anti-DDos network, including traffic filtration and load balancing</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Guaranteed HIPAA, GDPR, and PCI-DSS compliance, advised by our team of legal consultants</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Expert guidance on ongoing incident response and business continuity planning</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>AI-powered anti-ransomware tools, including signature heuristics and file scanning</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Real-time behavioural analysis and threat monitoring, powered by AegisAI</td>
+                <td class="blank"></td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Strict enforcement of identity management and authentication</td>
+                <td class="blank"></td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Integrated VPN and packet encryption against man-in-the-middle attacks</td>
+                <td class="blank"></td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+            <tr>
+                <td>Detailed logs and reports of user actions for digital forensics</td>
+                <td class="blank"></td>
+                <td class="blank"></td>
+                <td class="checkmark">✓</td>
+                <td class="checkmark">✓</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <button class="blue-btn">Explore all options</button>
             </div>
         </section>
 
