--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
     <footer>
             <div class="footerContainer">
                 <div class="footerItem">
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="privacy-and-terms#privacy-policy.html">Privacy Policy</a>
+                    <a href="privacy-and-terms#terms'conditions.html">Terms and Conditions</a>
                     <a href="contact.html">Contact us</a>
                 </div>
                 <div class="footerItem">
