--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gridrunner</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main_styles.css">
 </head>
 <body>
     <header id="initial-header" class="initial-header">
