--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
                 <a href="products.html" class="nav-link">PRODUCTS</a>
-                <a href="#Partners" class="nav-link">PARTNERS</a>
-                <a href="#" class="nav-link">COMPANY</a>
+                <a href="partners.html" class="nav-link">PARTNERS</a>
+                <a href="company.html" class="nav-link">COMPANY</a>
             </nav>
         </div>
     </header>
@@ -151,7 +151,6 @@
     <div class="container text-center">
         <h2 class="text-center">Trusted by the best</h2>
         <hr class="red-line"> <br>
-        <p>2000+ Gridrunner customers</p>
 
         <div class="grid">
             <div class="story-card text-center">
@@ -229,7 +228,7 @@
             Copyright © 2024 Gridrunner. All Rights Reserved
         </div>
     </footer>
-    <script src="script.ts"></script>
+    <script src="index_script.js"></script>
 </body>
 </html>
 
