--- a/partners.html
+++ b/partners.html
@@ -15,7 +15,7 @@
                 <a href="partners.html" class="nav-link">PARTNERS</a>
                 <a href="company.html" class="nav-link">COMPANY</a>
             </nav>
-            <button class="btn btn-secondary" href="demo.html">GET DEMO</button>
+            <a class="btn btn-secondary" href="demo.html">GET DEMO</a>
         </div>
     </header>
 <section id="partners">
