--- a/partners.html
+++ b/partners.html
@@ -136,7 +136,7 @@
                 <div class="footerItem">
                     <a href="terms-and-privacy.html#privacy-policy">Privacy Policy</a>
                     <a href="terms-and-privacy.html#terms-and-conditions">Terms and Conditions</a>
-                    <a href="#">Contact us</a>
+                    <a href="contact-us.html">Contact us</a>
                 </div>
                 <div class="footerItem">
                     <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
