--- a/demo.html
+++ b/demo.html
@@ -7,17 +7,18 @@
     <title>Demo</title>
 </head>
 <body>
-    <header class="main-header">
-        <nav>
-            <a href="index.html" class="logo"><b> GRIDRUNNER</b></a>
-            <a href="platform.html" class="nav-link">Platform</a>
-            <a href="products.html" class="nav-link">Products</a>
-            <a href="partners.html" class="nav-link">Partners</a>
-            <a href="company.html" class="nav-link">Company</a>
-            <button class="btn btn-secondary">GET DEMO</button>
-        </nav>
-</header>
-
+    <header id="initial-header" class="initial-header">
+        <div class="container">
+            <a href="index.html" class="logo">GRIDRUNNER</a>
+            <nav>
+                <a href="platform.html" class="nav-link">PLATFORM</a>
+                <a href="products.html" class="nav-link">PRODUCTS</a>
+                <a href="partners.html" class="nav-link">PARTNERS</a>
+                <a href="company.html" class="nav-link">COMPANY</a>
+            </nav>
+        <a class="btn btn-secondary" href="demo.html">GET DEMO</a>
+        </div>
+    </header>
     <div class="demo-container">
     <!-- Left Panel: Product Information -->
     <div class="left-panel">
